// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`write-config no categories should write a navbar config file using the navbar template 1`] = `
"* Languages
  * [fr-FR](/fr/)
  * **en-US**
"
`;

exports[`write-config no categories should write a sidebar config file using the sidebar template 1`] = `
"* [Home](/)
"
`;

exports[`write-config no categories should write an index config file using the index template 1`] = `
"<!DOCTYPE html>
<html>

<head>
  <meta charset=\\"UTF-8\\">
  <title>macOS defaults</title>
  <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge,chrome=1\\" />
  <meta name=\\"description\\" content=\\"Incomplete list of macOS \`defaults\` commands with demos ✨\\">
  <meta name=\\"viewport\\"
    content=\\"width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0\\">
  <link rel=\\"stylesheet\\" href=\\"//unpkg.com/docsify/lib/themes/vue.css\\">
  <link rel=\\"icon\\" href=\\"favicon.ico\\">
</head>

<body>
  <div id=\\"app\\">Please enable JavaScript to access this website.</div>

  <script>
    window.$docsify = {
      name: 'macos-defaults',
      repo: 'yannbertrand/macos-defaults',
      subMaxLevel: 2,
      loadSidebar: true,
      loadNavbar: true,
      alias: {
      },
      nameLink: {
        '/fr/': '/#/fr/',
        '/': '/#/',
      }
    }
  </script>
  <script src=\\"//unpkg.com/docsify/lib/docsify.min.js\\"></script>
  <script src=\\"//unpkg.com/prismjs/components/prism-bash.min.js\\"></script>
  <script src=\\"//unpkg.com/docsify/lib/plugins/search.min.js\\"></script>
  <script src=\\"//unpkg.com/docsify/lib/plugins/zoom-image.min.js\\"></script>
  <script src=\\"//unpkg.com/docsify-copy-code\\"></script>
</body>

</html>"
`;

exports[`write-config one category, no page should write a navbar config file using the navbar template 1`] = `
"* Languages
  * [fr-FR](/fr/)
  * **en-US**
"
`;

exports[`write-config one category, no page should write a sidebar config file using the sidebar template 1`] = `
"* [Home](/)
* [Category](/category/)
"
`;

exports[`write-config one category, no page should write an index config file using the index template 1`] = `
"<!DOCTYPE html>
<html>

<head>
  <meta charset=\\"UTF-8\\">
  <title>macOS defaults</title>
  <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge,chrome=1\\" />
  <meta name=\\"description\\" content=\\"Incomplete list of macOS \`defaults\` commands with demos ✨\\">
  <meta name=\\"viewport\\"
    content=\\"width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0\\">
  <link rel=\\"stylesheet\\" href=\\"//unpkg.com/docsify/lib/themes/vue.css\\">
  <link rel=\\"icon\\" href=\\"favicon.ico\\">
</head>

<body>
  <div id=\\"app\\">Please enable JavaScript to access this website.</div>

  <script>
    window.$docsify = {
      name: 'macos-defaults',
      repo: 'yannbertrand/macos-defaults',
      subMaxLevel: 2,
      loadSidebar: true,
      loadNavbar: true,
      alias: {
        '/fr/category/_sidebar.md': '/fr/_sidebar.md',
        '/fr/category/_navbar.md': '/fr/_navbar.md',
        '/category/_sidebar.md': '/_sidebar.md',
        '/category/_navbar.md': '/_navbar.md',
      },
      nameLink: {
        '/fr/': '/#/fr/',
        '/': '/#/',
      }
    }
  </script>
  <script src=\\"//unpkg.com/docsify/lib/docsify.min.js\\"></script>
  <script src=\\"//unpkg.com/prismjs/components/prism-bash.min.js\\"></script>
  <script src=\\"//unpkg.com/docsify/lib/plugins/search.min.js\\"></script>
  <script src=\\"//unpkg.com/docsify/lib/plugins/zoom-image.min.js\\"></script>
  <script src=\\"//unpkg.com/docsify-copy-code\\"></script>
</body>

</html>"
`;

exports[`write-config one category, one page should write a navbar config file using the navbar template 1`] = `
"* Languages
  * [fr-FR](/fr/)
  * **en-US**
"
`;

exports[`write-config one category, one page should write a sidebar config file using the sidebar template 1`] = `
"* [Home](/)
* [Category](/category/)
 - [Page](/category/page)
"
`;

exports[`write-config one category, one page should write an index config file using the index template 1`] = `
"<!DOCTYPE html>
<html>

<head>
  <meta charset=\\"UTF-8\\">
  <title>macOS defaults</title>
  <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge,chrome=1\\" />
  <meta name=\\"description\\" content=\\"Incomplete list of macOS \`defaults\` commands with demos ✨\\">
  <meta name=\\"viewport\\"
    content=\\"width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0\\">
  <link rel=\\"stylesheet\\" href=\\"//unpkg.com/docsify/lib/themes/vue.css\\">
  <link rel=\\"icon\\" href=\\"favicon.ico\\">
</head>

<body>
  <div id=\\"app\\">Please enable JavaScript to access this website.</div>

  <script>
    window.$docsify = {
      name: 'macos-defaults',
      repo: 'yannbertrand/macos-defaults',
      subMaxLevel: 2,
      loadSidebar: true,
      loadNavbar: true,
      alias: {
        '/fr/category/_sidebar.md': '/fr/_sidebar.md',
        '/fr/category/_navbar.md': '/fr/_navbar.md',
        '/category/_sidebar.md': '/_sidebar.md',
        '/category/_navbar.md': '/_navbar.md',
      },
      nameLink: {
        '/fr/': '/#/fr/',
        '/': '/#/',
      }
    }
  </script>
  <script src=\\"//unpkg.com/docsify/lib/docsify.min.js\\"></script>
  <script src=\\"//unpkg.com/prismjs/components/prism-bash.min.js\\"></script>
  <script src=\\"//unpkg.com/docsify/lib/plugins/search.min.js\\"></script>
  <script src=\\"//unpkg.com/docsify/lib/plugins/zoom-image.min.js\\"></script>
  <script src=\\"//unpkg.com/docsify-copy-code\\"></script>
</body>

</html>"
`;

exports[`write-config one category, two pages should write a navbar config file using the navbar template 1`] = `
"* Languages
  * [fr-FR](/fr/)
  * **en-US**
"
`;

exports[`write-config one category, two pages should write a sidebar config file using the sidebar template 1`] = `
"* [Home](/)
* [Category](/category/)
 - [Page 1](/category/page1)
 - [Page 2](/category/page2)
"
`;

exports[`write-config one category, two pages should write an index config file using the index template 1`] = `
"<!DOCTYPE html>
<html>

<head>
  <meta charset=\\"UTF-8\\">
  <title>macOS defaults</title>
  <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge,chrome=1\\" />
  <meta name=\\"description\\" content=\\"Incomplete list of macOS \`defaults\` commands with demos ✨\\">
  <meta name=\\"viewport\\"
    content=\\"width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0\\">
  <link rel=\\"stylesheet\\" href=\\"//unpkg.com/docsify/lib/themes/vue.css\\">
  <link rel=\\"icon\\" href=\\"favicon.ico\\">
</head>

<body>
  <div id=\\"app\\">Please enable JavaScript to access this website.</div>

  <script>
    window.$docsify = {
      name: 'macos-defaults',
      repo: 'yannbertrand/macos-defaults',
      subMaxLevel: 2,
      loadSidebar: true,
      loadNavbar: true,
      alias: {
        '/fr/category/_sidebar.md': '/fr/_sidebar.md',
        '/fr/category/_navbar.md': '/fr/_navbar.md',
        '/category/_sidebar.md': '/_sidebar.md',
        '/category/_navbar.md': '/_navbar.md',
      },
      nameLink: {
        '/fr/': '/#/fr/',
        '/': '/#/',
      }
    }
  </script>
  <script src=\\"//unpkg.com/docsify/lib/docsify.min.js\\"></script>
  <script src=\\"//unpkg.com/prismjs/components/prism-bash.min.js\\"></script>
  <script src=\\"//unpkg.com/docsify/lib/plugins/search.min.js\\"></script>
  <script src=\\"//unpkg.com/docsify/lib/plugins/zoom-image.min.js\\"></script>
  <script src=\\"//unpkg.com/docsify-copy-code\\"></script>
</body>

</html>"
`;

exports[`write-config two categories, one page in each should write a navbar config file using the navbar template 1`] = `
"* Languages
  * [fr-FR](/fr/)
  * **en-US**
"
`;

exports[`write-config two categories, one page in each should write a sidebar config file using the sidebar template 1`] = `
"* [Home](/)
* [Category 1](/category1/)
 - [Page](/category1/page)
* [Category 2](/category2/)
 - [Page](/category2/page)
"
`;

exports[`write-config two categories, one page in each should write an index config file using the index template 1`] = `
"<!DOCTYPE html>
<html>

<head>
  <meta charset=\\"UTF-8\\">
  <title>macOS defaults</title>
  <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge,chrome=1\\" />
  <meta name=\\"description\\" content=\\"Incomplete list of macOS \`defaults\` commands with demos ✨\\">
  <meta name=\\"viewport\\"
    content=\\"width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0\\">
  <link rel=\\"stylesheet\\" href=\\"//unpkg.com/docsify/lib/themes/vue.css\\">
  <link rel=\\"icon\\" href=\\"favicon.ico\\">
</head>

<body>
  <div id=\\"app\\">Please enable JavaScript to access this website.</div>

  <script>
    window.$docsify = {
      name: 'macos-defaults',
      repo: 'yannbertrand/macos-defaults',
      subMaxLevel: 2,
      loadSidebar: true,
      loadNavbar: true,
      alias: {
        '/fr/category1/_sidebar.md': '/fr/_sidebar.md',
        '/fr/category1/_navbar.md': '/fr/_navbar.md',
        '/category1/_sidebar.md': '/_sidebar.md',
        '/category1/_navbar.md': '/_navbar.md',
        '/fr/category2/_sidebar.md': '/fr/_sidebar.md',
        '/fr/category2/_navbar.md': '/fr/_navbar.md',
        '/category2/_sidebar.md': '/_sidebar.md',
        '/category2/_navbar.md': '/_navbar.md',
      },
      nameLink: {
        '/fr/': '/#/fr/',
        '/': '/#/',
      }
    }
  </script>
  <script src=\\"//unpkg.com/docsify/lib/docsify.min.js\\"></script>
  <script src=\\"//unpkg.com/prismjs/components/prism-bash.min.js\\"></script>
  <script src=\\"//unpkg.com/docsify/lib/plugins/search.min.js\\"></script>
  <script src=\\"//unpkg.com/docsify/lib/plugins/zoom-image.min.js\\"></script>
  <script src=\\"//unpkg.com/docsify-copy-code\\"></script>
</body>

</html>"
`;
